k8s/07-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stocktrack-frontend
  namespace: stocktrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stocktrack-frontend
  template:
    metadata:
      labels:
        app: stocktrack-frontend
    spec:
      containers:
        - name: frontend
          image: 223057/stocktrack-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: stocktrack-frontend-svc
  namespace: stocktrack
spec:
  selector:
    app: stocktrack-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
